# netbox-discovery-plugin

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  plan.md  pyproject.toml
docs/: api.md  choices.md  discovery-collector.md  discovery-driver-detect.md  discovery-neighbor.md  discovery-scanner.md  filtersets.md  forms.md  jobs.md  migrations.md  models.md  navigation.md  plugin-init.md  sync-classify.md  sync-netbox-sync.md  tables.md  templates.md  urls.md  views.md
netbox_discovery/: __init__.py  choices.py  filtersets.py  forms.py  jobs.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_discovery/api/: serializers.py  urls.py  views.py
netbox_discovery/discovery/: collector.py  driver_detect.py  neighbor.py  scanner.py
netbox_discovery/migrations/: 0001_initial.py  0002_discoverytarget_max_workers.py  0003_discoveryrun_device_results.py  0004_discoverytarget_exclusions.py  0005_sync_model_metadata.py
netbox_discovery/sync/: classify.py  netbox_sync.py
netbox_discovery/templates/netbox_discovery/: discoveryrun.html  discoveryrun_list.html  discoverytarget.html  discoverytarget_edit.html  discoverytarget_list.html  duplicate_devices.html
tests/: test_collector.py  test_driver_detect.py  test_netbox_sync.py
